<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmackDemo</string>
    <string name="action_settings">Settings</string>
    <string name="label_endpoint">Endpoint:</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_connectButton">Connect</string>
    <string name="hint_endpoint">Endpoint Adress</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_chat">SmackDemo</string>
    <string name="hint_log">Log...</string>
    <string name="label_sendButton">Send</string>
    <string name="hint_to">user@example.com</string>
    <string name="hint_text">Some text</string>
    <string name="label_to">To:</string>
    <string name="label_message">Message:</string>

</resources>
